--- a/Elliot/quienes-somos.html
+++ b/Elliot/quienes-somos.html
@@ -185,7 +185,7 @@
             <div class="col-4">
                 <center>
                     <p><b>Hernando Rodriguez Gonzales</b></p>
-                    <p>Docenteñ del Departamento de Ingeniería de Sistemas e Industrial de la Universidad Nacional de Colombia.
+                    <p>Docente del Departamento de Ingeniería de Sistemas e Industrial de la Universidad Nacional de Colombia.
                         <br><br>
                         <a href="mailto:herrodriguezg@unal.edu.co">
                             herrodriguezg@unal.edu.co
