--- a/Elliot/planes.html
+++ b/Elliot/planes.html
@@ -121,7 +121,7 @@
                                 </li>
                             </ul>
                             <div class="d-grid">
-                                <a href="#" class="btn text-uppercase">Comprar</a>
+                                <a href="contacto.html" class="btn text-uppercase">Comprar</a>
                             </div>
                         </div>
                     </div>
@@ -145,7 +145,7 @@
                                 </li>
                             </ul>
                             <div class="d-grid">
-                                <a href="#" class="btn text-uppercase">Comprar</a>
+                                <a href="contacto.html" class="btn text-uppercase">Comprar</a>
                             </div>
                         </div>
                     </div>
@@ -169,7 +169,7 @@
                                 <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Cámaras ilimitadas</li>
                             </ul>
                             <div class="d-grid">
-                                <a href="#" class="btn text-uppercase">Comprar</a>
+                                <a href="contacto.html" class="btn text-uppercase">Comprar</a>
                             </div>
                         </div>
                     </div>
