--- a/Elliot/productos.html
+++ b/Elliot/productos.html
@@ -126,7 +126,7 @@
                         <h5 class="card-title">CCTV</h5>
                         <p class="card-text">Es una instalación de equipos conectados que generan un circuito de imágenes que solo puede ser visto por un grupo determinado de personas, estas se personalizan para adaptarse a las necesidades de cada cliente bien sean orientadas
                             a la seguridad, vigilancia o mejora de servicio. </p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        <p class="card-text"><small class="text-muted">Last updated 4 days ago</small></p>
                     </div>
                 </div>
                 <div class="card" style="margin-left: 30px; margin-right: 30px;">
@@ -135,7 +135,7 @@
                         <h5 class="card-title">Relé</h5>
                         <p class="card-text">Es un dispositivo electromagnético. Funciona como un interruptor controlado por un circuito eléctrico en el que, por medio de una bobina y un electroimán, se acciona un juego de uno o varios contactos que permiten abrir o cerrar
                             otros circuitos eléctricos independientes.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        <p class="card-text"><small class="text-muted">Last updated 1 day ago</small></p>
                     </div>
                 </div>
                 <div class="card">
@@ -144,7 +144,7 @@
                         <h5 class="card-title">Sensor</h5>
                         <p class="card-text">Es un dispositivo que detecta el cambio en el entorno y responde a alguna salida en el otro sistema. Un sensor convierte un fenómeno físico en un voltaje analógico medible (o, a veces, una señal digital) convertido en una pantalla
                             legible para humanos o transmitida para lectura o procesamiento adicional.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        <p class="card-text"><small class="text-muted">Last updated 7 days ago</small></p>
                     </div>
                 </div>
             </div>
