--- a/Elliot/quienes-somos.html
+++ b/Elliot/quienes-somos.html
@@ -196,6 +196,28 @@
         </div>
     </div>
 
+    <center>
+        <hr style="width:20%; height: 3px; background-color:#000; margin-top: 50px; margin-bottom: 50px;">
+    </center>
+
+
+    <div class="container px-4" style="margin-left: 100px; margin-bottom: 50px; display: flex; align-items: center; justify-content: center;">
+        <h1>APOYANOS A SEGUIR CRECIENDO</h1>
+
+        <div class="row">
+            <div class="col-9">
+                <p>
+                    Tu donación aportaría para el contínuo desarrollo del aplicativo con eso Elliot va a llegar a más usuarios del mundo.
+                </p>
+            </div>
+            <div class="col-3">
+                <center>
+                    <img src="Resources/Images/qr.png" alt="Codigo QR">
+                </center>
+            </div>
+        </div>
+    </div>
+
     <!------------->
     <!-- LANDING -->
     <!------------->
